test: Add more tests #3
Signed-off-by: ToxYc <ivi1000vm@gmail.com>