@@ -10,7 +10,6 @@ import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Mapper(componentModel = "spring", imports = { StringTranslator.class })
 public interface WorldServiceMapper {
@@ -25,7 +24,7 @@ public interface WorldServiceMapper {
     default List<PlaceODTO> toPlaceODTOList(List<PlaceMO> places, String language) {
         return places.stream()
                 .map(place -> toPlaceODTO(place, language))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Mapping(target = "name", expression = "java(StringTranslator.translate(place.name(), language))")
